# gscale-erp-read-rs

./: Cargo.toml  README.md
src/: appconfig.rs  httpapi.rs  lib.rs  main.rs  store.rs
